--- a/Projetos/Jogo-da-velha/velha.css
+++ b/Projetos/Jogo-da-velha/velha.css
@@ -125,3 +125,9 @@
 .mostrarMensagem{
     display: flex;
 }
+
+@media screen and (min-width: 1000px) {
+    .board{
+        height: 65vh;
+    }
+}
