--- a/Projetos/projetos.css
+++ b/Projetos/projetos.css
@@ -50,7 +50,7 @@ h1.PageProjetos{
 }
 
 .projetoZ h4{
-    color: rgb(252, 0, 0);
+    color: rgb(247, 47, 47);
     font-size: 1.2rem;
     text-align: center;
     text-shadow: 2px 1px 1px rgba(0, 0, 0, 0.5);
@@ -61,4 +61,27 @@ h1.PageProjetos{
     text-align: justify;
     padding: 5px;
     font-size: 1.1rem;
+}
+
+/*Responsividade*/
+
+@media screen and (min-width: 1000px) {
+    h1.PageProjetos {
+        font-size: 2rem;
+    }
+
+    .projetoZ h4{
+        color: gray;
+        font-size: 1.5rem;
+        text-shadow: 2px 1px 1px rgba(0, 0, 0, 1);
+    }
+
+    .projetoZ p{
+        font-size: 1.3rem;
+        text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
+    }
+
+    .projetoZ > a:hover{
+        border-bottom: 3px solid rgb(191, 208, 253);
+    }
 }
